moved dtos from dtos/swagger to dtos
